BUG#47838, NULL values in ranges was dropped due to missing else part in store_tuple_to_record